--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -1,12 +1,91 @@
-h1 {
-	color: blue;
-	
+body {
+	background-color: #66545e;
 }
 
-.navbar navbar-dark bg-primary {
+.navbar-brand {
+	font-size: 40px;
+	color: #a39193;
+}
+
+.jumbotron {
+	background-image: url(../Media/personality.gif);
+	padding: 20%;
+	background-repeat: no-repeat;
+	background-size: cover;
+	width: 100%;
+	margin-top: 40px;
+	background-attachment: fixed;
+	background-position: center -238px;
+	color: #a39193;
+}
+
+.jumbotron h1 {
+	position: absolute;
+	top: 22px;
+	left: 0;
+	padding-left: 20px;
+	color: #F7FaFe;
+}
+
+.info {
+	background-color: #a39193;
+	color: #f6e0b5;
+	margin-top: -30px;
+}
+
+.info h3 {
+	font-family: 'Raleway', sans-serif;
+	padding: 5% 10%;
+	text-align: center;
+}
+
+.features {
+	padding: 5% 0;
+}
+
+.features p {
+	font-family: 'Muli', sans-serif;
+	text-align: center;
+	color:  #f6e0b5;
+	font-size: 1.2em;
+	padding-top: 10px;
+}
+
+#expereince {
+	color: #f6e0b5;
+}
+
+#skills, #bio {
+	color: #f6e0b5;
+	margin-left: 50px;
+
+}
+
+h6 {
+	font-size: 17px;
+}
+
+footer {
+	background-color: #aa6f73;
+	position: absolute;
+	width: 100%;
+	height: auto;
+}
+
+footer ul li {
 	display: inline-block;
+	list-style: none;
+	padding: 2%;
+	float: right;
 }
 
-.carousel-indicators {
-	height: 30%;
+footer p {
+	float: left;
+	padding: 3%;
+}
+
+footer a,
+footer p {
+	color: #fff;
+	vertical-align: middle;
 }
